# dist-rs

./: Cargo.toml  README.md
abd/: Cargo.toml
abd/src/: lib.rs  store.rs
examples/clnt-state-machine/: Cargo.toml
examples/clnt-state-machine/src/: main.rs
examples/counter/client/: Cargo.toml
examples/counter/client-protocol/: Cargo.toml  build.rs
examples/counter/client-protocol/src/: counter.proto
examples/counter/client/src/: main.rs
examples/counter/server/: Cargo.toml  peers.json
examples/counter/server-protocol/: Cargo.toml  build.rs
examples/counter/server-protocol/src/: lib.rs  raft.proto
examples/counter/server/src/: conn.rs  machine.rs  main.rs  service.rs
examples/kvs/: README.md
examples/kvs/client/: Cargo.toml
examples/kvs/client/src/: main.rs
examples/kvs/protocol/: Cargo.toml  build.rs
examples/kvs/protocol/src/: kvs.proto  lib.rs
examples/kvs/server/: Cargo.toml
examples/kvs/server/src/: main.rs  service.rs
examples/protos/: Cargo.toml  build.rs
examples/protos/src/: lib.rs  state_machine_server.proto
examples/server-state-machine/: Cargo.toml
examples/server-state-machine/src/: main.rs  service.rs
examples/state-machine/: README.md
examples/state-machine/client/: Cargo.toml
examples/state-machine/client/src/: main.rs
examples/state-machine/protocol/: Cargo.toml
examples/state-machine/protocol/src/: counter.proto  lib.rs
examples/state-machine/server/: Cargo.toml
examples/state-machine/server/src/: main.rs  service.rs
raft/: Cargo.toml
raft/src/: lib.rs  log.rs  replica.rs  result_map.rs  state_machine.rs
state-machine/: Cargo.toml
state-machine/src/: lib.rs
