[package]
name = "abd"
version = "0.1.0"
authors = ["bsdinis <baltasar.dinis@tecnico.ulisboa.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"
futures = "0.3.8"
num = "0.3.1"

[dev-dependencies]
dashmap = "3.11"
tokio = { version = "0.3", features = ["full"] }
