[package]
name = "raft"
version = "0.1.0"
authors = ["bsdinis <baltasar.dinis@tecnico.ulisboa.pt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"
dashmap = "4.0"
tokio = { version = "1.0" , features = ["sync", "macros"] }
futures = "0.3"

[dev-dependencies]
tokio-test="0.4"
