[package]
name = "server-state-machine"
version = "0.1.0"
authors = ["bsdinis <baltasar.dinis@tecnico.ulisboa.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
color-eyre = "0.5"
eyre = "0.6"
protos = { path = "../protos" }
tokio = { version = "0.2", features = ["full"] }
tonic = "0.3.1"
tracing = "0.1"
tracing-appender = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"

state-machine = { path = "../../state-machine" }
