[package]
name = "counter-client"
version = "0.1.0"
authors = ["bsdinis <baltasar.dinis@tecnico.ulisboa.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
async-trait = "0.1.42"
color-eyre = "0.5"
eyre = "0.6"
tokio = { version = "0.2", features = ["full"] }
tonic = "0.3.1"
structopt = "0.3"

counter-client-protocol = { path = "../client-protocol" }
