[package]
name = "counter-server"
version = "0.1.0"
authors = ["bsdinis <baltasar.dinis@tecnico.ulisboa.pt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
async-trait = "0.1.42"
color-eyre = "0.5"
dashmap = "3.11"
eyre = "0.6"
json = "0.12"
tokio = { version = "0.2", features = ["full"] }
tonic = "0.3.1"
tracing = "0.1"
tracing-appender = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"

counter-server-protocol = { path = "../server-protocol" }
counter-client-protocol = { path = "../client-protocol" }
raft = { path = "../../../raft" }
